--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">CameraApp</string>
-    <string name="take_picture">Take Picture</string>
+    <string name="take_photo">Take Photo</string>
 </resources>
