--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CameraApp</string>
     <string name="take_photo">Take Photo</string>
+    <string name="gallery">Gallery</string>
 </resources>
