--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CameraApp</string>
     <string name="take_photo">Take Photo</string>
     <string name="gallery">Gallery</string>
+    <string name="button_camera">Camera</string>
 </resources>
